[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "python-stuff"
dynamic = ["version"]
authors = [
  { name="Micky Lindsay", email="mekelnz@gmail.com" },
]
description = "my python stuff"
readme = "README.md"
dependencies = [
    # Add runtime dependencies here
]

[project.optional-dependencies]
lint = [
    "mypy", # Typechecker
    "ruff", # Linter
]
test = [
    "pytest==7.4.1",
    "pytest-cov==4.1.0",
    "coverage[toml]==7.3.1",
]
doc = [
]
build = [
]
dev = [
    "tox",
    "python-stuff[lint]",
    "python-stuff[test]",
    "python-stuff[doc]",
    "python-stuff[build]",
]

# Enables the usage of setuptools_scm
[tool.setuptools_scm]

[tool.ruff]
line-length = 120
src = ["src"]
extend-exclude = [
    "conf.py",
]
target-version = "py311"
select = ["ALL"]
ignore = [
    "COM812",   # Conflicts with the formatter
    "ISC001",   # Conflicts with the formatter
    "ANN101",   # "missing-type-self"
    "PT001",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT004",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT005",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT023",    # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
]

[tool.ruff.per-file-ignores]
"tests/**" = [
    "INP001",   # Requires __init__.py but tests folder is not a package.
    "S101", # Use of `assert` detected
    "D100", # Missing docstring in public module
    "D103", # Missing docstring in public function
    "PLR2004", # Magic value used in comparison
]
"**/__init__.py" = [
    "F401", # Imported but unused
    "F403", # Wildcard imports
    "D104", # Missing docstring in public package
]
"docs/**" = [
    "INP001",   # Requires __init__.py but docs folder is not a package.
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`(https://github.com/astral-sh/ruff/issues/5434)
keep-runtime-typing = true

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
disallow_untyped_defs = true # Functions need to be annotated
warn_unused_ignores = true
exclude = [
    "python-stuff-\\d+", # Ignore temporary folder created by setuptools when building an sdist
    "venv.*/",
    "build/",
    "dist/",
]

[tool.pytest.ini_options]
addopts = """
    --import-mode=append
    --cov=python_stuff
    --cov-config=pyproject.toml
    --cov-report=
    """

[tool.coverage.paths]
# Maps coverage measured in site-packages to source files in src
source = ["src/", ".tox/*/lib/python*/site-packages/"]

[tool.coverage.html]
directory = "reports/coverage_html"